--- a/index.html
+++ b/index.html
@@ -154,8 +154,10 @@
         }
 
         @media only screen and (max-device-width: 600px) {
-            body {
-                font-size: 1.2rem;
+
+            body,
+            header h3 {
+                font-size: 1.2em;
             }
 
             header {
