--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>RemoteFiles - A open source SFTP client</title>
+    <title>RemoteFiles - An open source SFTP client</title>
 
     <link rel="stylesheet" type="text/css"
         href="https://cdn.materialdesignicons.com/4.4.95/css/materialdesignicons.min.css">
@@ -216,7 +216,7 @@
     <header>
         <img src="https://github.com/niklas-8/RemoteFiles/blob/master/assets/app_icon_bg.png?raw=true" />
         <h1>RemoteFiles</h1>
-        <h3>A open source SFTP client for Android and iOS</h3>
+        <h3>An open source SFTP client for Android and iOS</h3>
         <h3>Version 0.0.9 [Beta]</h3>
         <div id="button-container">
             <a id="button" href="https://github.com/niklas-8/RemoteFiles"><span id="icon"
@@ -267,10 +267,7 @@
         </ul>
         <div id="divider"></div>
         <h2>Contributing</h2>
-        <p>
-            Please feel free to contribute by opening an issue, sending a feature
-            request or a bug report on GitHub.
-        </p>
+        <p>Please feel free to contribute by opening an issue, sending a feature request or a bug report on GitHub.</p>
         <div id="divider"></div>
         <h2>Screenshots</h2>
         <div id="screenshot-container">
